# nes-emulator

./: .gitignore  README.txt  compile  nes  nes.c  nes.h
ROMS/Games/: roms.txt
debug/: debug.c  debug.h  debug_panel.c  debug_panel.h  pattern_table.c
devices/: controller.c  controller.h  display.c  display.h
memory/: mapper.c  mapper.h  mem.c  mem.h  ram.h  rom.c  rom.h
processing/: apu.c  apu.h  cpu.c  cpu.h  palette.c  palette.h  ppu.c  ppu.h  temp.c  temp2.c
src/: CMakeLists.txt  NESConfig.h.in  nes.c  nes.h
src/debug/: debug.c  debug.h  debug_panel.c  name_table.c  name_table.h  pattern_table.c  pattern_table.h
src/devices/: controller.c  controller.h  display.c  display.h
src/memory/: mapper.c  mapper.h  mem.c  mem.h  ram.c  rom.c  rom.h  vram.c  vram.h
src/processing/: apu.c  apu.h  cpu.c  cpu.h  palette.c  ppu.c  ppu.h  ppu_old.c  ppu_old.h  temp.c  temp2.c
